--- a/ExercicioContato/style.css
+++ b/ExercicioContato/style.css
@@ -3,5 +3,13 @@ body{
 }
 form{
     background-color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    padding: 10px;
+    margin-top: 60%;    
+}
+
+div{
+    width: 20%;
+    margin: 5em auto;
 }
