Aula de Responsividade 03/03/2023

--- a/SemanticaCSS/style.css
+++ b/SemanticaCSS/style.css
@@ -7,6 +7,15 @@
 body {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,36,121,1) 35%, rgba(0,212,255,1) 100%);
 }
+header{
+    height: 80px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+}
 
 /* id */
 #menu {
