--- a/ExercicioContato/style.css
+++ b/ExercicioContato/style.css
@@ -6,7 +6,8 @@ form{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 10px;
-    margin-top: 60%;    
+    margin-top: 60%;
+    border-radius: 10%;
 }
 
 div{
