--- a/ExercicioMQRemake/style.css
+++ b/ExercicioMQRemake/style.css
@@ -6,26 +6,36 @@ body{
 }
 
 .menu {
-    display: flex;
     background-color: red;
+    width: 100%;
+    height: 80px;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.menu link{
+
+.menu .link{
     font-family: Arial, Helvetica, sans-serif;
     color:aliceblue;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
-.menu .logo{
-    width: 50px;
-    display: flex;
-    justify-content: flex-start;
+.menu img{
+    width: 275px;
+    padding-left: 20px;
 }
 
 .menu .hamburguer{
     width: 50px;
     display: flex;
     justify-content: flex-end;
+}
+
+.menu .hamburguer{
+    display: none;
 }
 
 /*-------------------------------------------------------------------*/
