--- a/AvaliacaoGrupoHTML/style.css
+++ b/AvaliacaoGrupoHTML/style.css
@@ -1,22 +1,34 @@
 /* --------------- Header --------------- */
 body{
-    background-color: aliceblue;
+
+    background-image: url(img/coffee-5417663_1280.png);
+    background-size: 350px;
     margin: 0px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family: sans-serif; color:aliceblue
 }
 
 .menu{
-    background-color: rgb(163, 189, 214);
+    position:fixed;
+    width: 100%;
+    background-color: rgb(88, 49, 1);
     display: flex;
     justify-content: space-between;
-    /*            ⇑   ⇐   ⇓   ⇒    */
-    box-shadow: 5px 0px 5px 4px rgb(124, 124, 124);
+    height: 50px;
+}
+
+.fundo{
+    position:fixed;
+    width: 100%; 
+    padding-bottom: 55px;
+    background-color: black;
 }
 
 .menu img{
     width: 50px;
     padding-left: 5px;
     padding-right: 5px;
+    margin-right: px;
+    background-color: rgb(96, 56, 8);
 }
 
 .menu .menuLink{
@@ -27,7 +39,16 @@ body{
 .menu .menuLink .LinkMenu{
     padding: 10px;
     text-decoration: none;
-    color: black;
+    color: aliceblue;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.LinkMenu:hover{
+    background: rgba(0,0,0,0);
+    background-color: rgb(111, 69, 24);
+    box-shadow: inset 0 0 0 3px rgb(111, 69, 24);
+    border-radius: 50px;
 }
 
 .menu .cadastro{
@@ -41,6 +62,9 @@ body{
     background-color: aliceblue;
     border-radius: 50px;
     border-color: black;
+    padding-left: 15px;
+    padding-right: 15px;
+    cursor: pointer;
 }
 
 .menu .cadastro .button2{
@@ -49,5 +73,8 @@ body{
     color: white;
     border-color: white;
     border-radius: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+    cursor: pointer;
 }
 
